<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/forget_username"
        android:hint="@string/login_username"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/forget_number"
        android:hint="@string/initial_number"
        android:layout_margin="16dp"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/forget_new_pwd1"
        android:hint="@string/new_pwd1"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/forget_new_pwd2"
        android:hint="@string/new_pwd2"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>