<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/initial_pwd"
        android:hint="@string/initial_pwd"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/first_change_pwd"
        android:hint="@string/first_change_pwd"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/second_change_pwd"
        android:hint="@string/second_change_pwd"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>