<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#eeeeee"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/fragment_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <!--标题-->
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_marginTop="5dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/logo" />
    <!--部门选择-->
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/department"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp"/>
        <Spinner
            android:id="@+id/choose_department"
            android:entries="@array/department"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp">
        </Spinner>
    </LinearLayout>

    <!--用户名框-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_username"
            android:hint="@string/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <!--密码框-->

    <android.support.design.widget.TextInputLayout
        app:errorTextAppearance="@style/register_error"
        android:id="@+id/register_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password"
            android:hint="@string/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:errorTextAppearance="@style/login_error"
        android:id="@+id/register_password_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password_2"
            android:hint="@string/register_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:errorTextAppearance="@style/login_error"
        app:counterMaxLength="11"
        app:counterEnabled="true"
        android:id="@+id/register_phoneNumber_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_phoneNumber"
            android:hint="@string/register_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>



    <!--注册-->
    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:background="@drawable/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!--已有账号的返回登录-->
    <TextView
        android:id="@+id/do_login"
        android:gravity="center"
        android:text="@string/do_login"
        android:layout_margin="32dp"
        android:clickable="true"
        android:textColor="@color/loginColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>