<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/fragment_login"
    android:padding="0dp"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.seuxxd.trainingapp.MainActivity">


    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/logo" />

    <!-- <TextView
         android:id="@+id/top_login_text"
         android:text="@string/top_name"
         android:gravity="center"
         android:textAppearance="@style/login_register_top"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>-->

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.7"
            android:background="@drawable/user_icon"
            android:id="@+id/textView"/>
        <!--用户名框-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_username_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_username"
                android:hint="@string/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!--密码框-->
    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.7"
            android:background="@drawable/password_icon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorTextAppearance="@style/login_error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <!--记住密码-->
    <CheckBox
        android:id="@+id/store_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_info"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"/>

    <!--登录-->

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- 忘记密码-->
            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forget_pwd"
                android:textColor="@color/loginColor"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_gravity="start"/>

            <!--没有账号的进行注册-->
            <TextView
                android:id="@+id/do_register"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:autoLink="all"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/do_register"
                android:textColor="@color/loginColor"/>
        </LinearLayout>


</LinearLayout>