<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/training_notification"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:background="@color/bg_color"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <LinearLayout
                android:layout_margin="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:drawableTop="@drawable/gui_logo"
                    android:text="@string/rules"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:drawableTop="@drawable/pin_logo"
                    android:text="@string/video"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:drawableTop="@drawable/wen_logo"
                    android:text="@string/powerpoint"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:drawableTop="@drawable/zhang_logo"
                    android:text="@string/malfunction"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/news_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <com.sunfusheng.marqueeview.MarqueeView
                    android:id="@+id/news_show"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mvDirection="bottom_to_top"
                    app:mvGravity="center"
                    app:mvInterval="3000"
                    app:mvAnimDuration="1000"
                    app:mvTextColor="@color/colorPrimary"
                    app:mvTextSize="16sp"
                    app:mvSingleLine="true">
                </com.sunfusheng.marqueeview.MarqueeView>
            </LinearLayout>

            <TextView
                android:id="@+id/news_more"
                android:text="@string/news_more"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/interest_video"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <cn.jzvd.JZVideoPlayerStandard
                android:id="@+id/index_like"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </LinearLayout>

    </ScrollView>




</LinearLayout>