<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/scan_image"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:id="@+id/scan_icon"
                android:src="@drawable/equip_scan"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="146dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/first_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/second_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/third_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/forth_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Spinner
                android:id="@+id/fifth_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <Button
                android:id="@+id/query_spinner"
                android:background="@drawable/btn"
                android:text="@string/spinner_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/scan_info_title"
            android:text="@string/scan_info_title"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"/>
        <TextView
            android:text="@string/spinner_info_title"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"/>
    </LinearLayout>





    <TextView
        android:id="@+id/scan_info"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/contents_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <android.support.design.widget.TabLayout
        android:id="@+id/equipment_inner_tab"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/equipment_inner_pager"
        android:background="#A4D3EE"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>


</LinearLayout>