<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_suggestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.seuxxd.trainingapp.SuggestionActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/suggestion_toolbar"
        android:background="@color/loginColor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <!--建议简述输入组件-->
    <TextView
        android:id="@+id/suggestion_abstract"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/suggestion_toolbar"
        android:textSize="24sp"
        android:text="@string/suggestion_abstract"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/suggestion_abstract_input_layout"
        android:layout_below="@id/suggestion_abstract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30">
        <EditText
            android:id="@+id/suggestion_abstract_input"
            android:singleLine="false"
            android:inputType="textImeMultiLine"
            android:maxLines="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>



    <!--建议详细内容输入组件-->
    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/suggestion_detail"
        android:text="@string/suggestion_detail"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_below="@id/suggestion_abstract_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/suggestion_detail_input_layout"
        android:layout_below="@id/suggestion_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="200">
        <EditText
            android:id="@+id/suggestion_detail_input"
            android:singleLine="false"
            android:minLines="2"
            android:maxLines="20"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/suggestion_submit"
        android:text="@string/submit_detail"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
